fixed:balance played

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <button class="danger" onclick="resetAll()">
           🔄 ล้างข้อมูลทั้งหมด
         </button>
-        <!-- <button id="btnStartGame" onclick="startGame()">🎯 เริ่มเกม</button> -->
+        <button id="btnStartGame" onclick="renderGame()">🎯 เริ่มเกม</button>
       </div>
     </div>
 
