--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
         </button>
         <button id="btnStartGame" onclick="renderGame()">🎯 เริ่มเกม</button>
       </div>
-      <div class="section" style="display:none;">
+      <div class="section">
         <h3>🔧 การตั้งค่าเริ่มต้น</h3>
-<pre><code>
+        <pre><code>
 localStorage.setItem('players', JSON.stringify([
   { "name": "เวย์", "gender": "male", "played": 0, "waitCount": 0 },
   { "name": "อาย", "gender": "female", "played": 0, "waitCount": 0 },
@@ -66,7 +66,7 @@ localStorage.setItem('players', JSON.stringify([
   { "name": "พี่ไผ่", "gender": "male", "played": 0, "waitCount": 0 },
   { "name": "แชมป์", "gender": "male", "played": 0, "waitCount": 0 },
   { "name": "พี่ฟลุค", "gender": "male", "played": 0, "waitCount": 0 },
-  { "name": "อายอาย", "gender": "male", "played": 0, "waitCount": 0 },
+  { "name": "อายอาย", "gender": "female", "played": 0, "waitCount": 0 },
   { "name": "น้องใหม่", "gender": "male", "played": 0, "waitCount": 0 },
   { "name": "นิกกี้", "gender": "male", "played": 0, "waitCount": 0 }
 ]));
